# IR_labs

./: .gitignore
Es1/: Readme.md
Es1/install/: local_setup.sh  setup.sh
Es1/install/cpp_pubsub_custom_msg/lib/cpp_pubsub_custom_msg/: robot
Es1/install/cpp_pubsub_custom_msg/share/ament_index/resource_index/parent_prefix_path/: cpp_pubsub_custom_msg
Es1/install/cpp_pubsub_custom_msg/share/cpp_pubsub_custom_msg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Es1/install/interfaces/include/interfaces/interfaces/msg/: cstm_inforobot.hpp
Es1/install/interfaces/include/interfaces/interfaces/msg/detail/: cstm_inforobot__description.c  cstm_inforobot__rosidl_typesupport_fastrtps_cpp.hpp  cstm_inforobot__rosidl_typesupport_introspection_c.h  cstm_inforobot__struct.h  cstm_inforobot__traits.hpp  cstm_inforobot__type_support.c
Es1/install/interfaces/share/ament_index/resource_index/rosidl_interfaces/: interfaces
Es1/install/interfaces/share/interfaces/: local_setup.sh  package.sh
Es1/install/interfaces/share/interfaces/msg/: CstmInforobot.idl  CstmInforobot.json  CstmInforobot.msg
Es1/log/: latest_build
Es1/src/cpp_pubsub_custom_msg/: CMakeLists.txt
Es1/src/cpp_pubsub_custom_msg/src/: charge_station.cpp  robot.cpp
Es1/src/interfaces/: CMakeLists.txt  package.xml
Es2/: Readme.md
Es2/src/custom_action_cpp/: CMakeLists.txt  package.xml
Es2/src/custom_action_cpp/src/: cs_action_client.cpp  robot_action_server.cpp
Es2/src/interfaces/: CMakeLists.txt  package.xml
Es2/src/interfaces/action/: Charge.action
Es3/: Readme.md  plot_path.py  vc_path_projected.csv  vc_to_cs_path_projected.csv  vc_to_floor_path_projected.csv
Es3/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
Es3/src/learning_tf2_cpp/src/: listener_bag.cpp
Es3/src/tf2_ex3_cpp/: CMakeLists.txt  package.xml
Es3/src/tf2_ex3_cpp/src/: path_tracker_listener.cpp
Es4/: Readme.md  launch_exercise_4.sh
Es4/launch/: ex4.launch.py
Es4/src/24_ex4/: CMakeLists.txt  package.xml
Es4/src/interfaces/: CMakeLists.txt  package.xml
Es4/src/interfaces/srv/: Apples.srv
Es4/src/twenty_four_ex4/: CMakeLists.txt  package.xml
Es4/src/twenty_four_ex4/src/: burrow_client.cpp  robot_server.cpp
Lab1/install/: local_setup.sh  setup.sh
Lab1/install/cpp_pubsub/lib/cpp_pubsub/: talker
Lab1/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh  package.xml
Lab1/log/: latest_build
Lab1/src/cpp_pubsub/src/: publisher_function.cpp  subscriber_function.cpp
Lab1_topics/src/cpp_pubsub/: CMakeLists.txt
Lab3/install/: local_setup.sh  setup.sh
Lab3/install/custom_action_cpp/lib/custom_action_cpp/: fibonacci_action_client  fibonacci_action_server
Lab3/install/custom_action_cpp/share/ament_index/resource_index/parent_prefix_path/: custom_action_cpp
Lab3/install/custom_action_cpp/share/custom_action_cpp/: local_setup.sh  package.sh
Lab3/install/custom_action_interfaces/share/custom_action_interfaces/: local_setup.sh  package.sh
Lab3/install/custom_action_interfaces/share/custom_action_interfaces/action/: Fibonacci.idl
Lab3/log/: latest_build
Lab3/src/custom_action_cpp/: CMakeLists.txt
Lab3/src/custom_action_cpp/src/: fibonacci_action_server.cpp
Lab3/src/custom_action_interfaces/: CMakeLists.txt
Lab3_actions/src/custom_action_cpp/: package.xml
Lab3_actions/src/custom_action_cpp/src/: fibonacci_action_client.cpp
Lab5_services/src/cpp_srvcli/: CMakeLists.txt  package.xml
Lab5_services/src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
Lab5_services/src/interfaces/: package.xml
Lab6_nav2/src/nav_basics/: CMakeLists.txt  package.xml
Lab6_nav2/src/nav_basics/src/: lifecycle_nodes_client.cpp  nav2_action_client.cpp  nav_node.cpp
