<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>

  <description>TODO: Package description</description>
  <maintainer email="alessandrochinello@todo.todo">alessandrochinello</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>

    <build_type>ament_cmake</build_type>

    <!-- This declares the package needs rclcpp and std_msgs when its code is built and executed.-->
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

  </export>
</package>

<!-- In general in dependencies files make sure that <description>, <maintainer> and <license> are present-->